src/app/components/users/user.component.scss
ion-chip {
  white-space: nowrap;

  &.avatar-only {
    max-width: 33px;
    padding: 4px;

    ion-avatar {
      margin: 0;
    }
  }

  &.you {
    &.ion-color-primary {
      background: var(--ion-color-primary);
      color: #fff;
    }
    &.ion-color-danger {
      background: var(--ion-color-danger);
      color: #fff;
    }
  }
}

